[gd_scene load_steps=6 format=3 uid="uid://838jty40d2ew"]

[ext_resource type="Script" uid="uid://7nvud3bejmjt" path="res://Racoons/racoonController.gd" id="1_liiyd"]
[ext_resource type="PackedScene" uid="uid://b4bs778tt3lds" path="res://Racoons/racoon.blend" id="2_4asjf"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_liiyd"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_liiyd"]
radius = 5.0

[sub_resource type="SphereMesh" id="SphereMesh_liiyd"]
radius = 0.2
height = 0.4

[node name="Racoon_char" type="CharacterBody3D" groups=["Enemies"]]
script = ExtResource("1_liiyd")

[node name="racoon" parent="." instance=ExtResource("2_4asjf")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_liiyd")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.1

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04718, 0)
shape = SubResource("CylinderShape3D_liiyd")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06841, 0)

[node name="Eye" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49458, 0.410448)
mesh = SubResource("SphereMesh_liiyd")

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SearchTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.0645804, 0)
light_color = Color(0.884773, 0.884119, 0, 1)
light_energy = 10.026
light_size = 0.175
spot_angle = 80.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
[connection signal="timeout" from="SearchTimer" to="." method="_on_search_timer_timeout"]
